fix align

--- a/stylesheets/prolog.css
+++ b/stylesheets/prolog.css
@@ -51,7 +51,11 @@
     position: absolute;
 
 }
-
+#Slide2{
+    margin-left:auto;
+    margin-right:auto;
+    display: flex;
+}
 /* Animation */
 .anim-typewriter{
     width:0;
